tests/aster/x/mochi/rosetta/evolutionary-algorithm.error
error[A024]: unknown function substring
  --> /workspace/mochi/tests/rosetta/x/Mochi/evolutionary-algorithm.mochi:14:10

 14 |   return substring(chars, idx, idx + 1)
    |          ^

help:
  Declare substring before use
